Fix raising Exceptions and add get grade for student and teacher
