# app/models/Statist.py
@@ -1,0 +1,9 @@
+from pydantic import BaseModel
+
+
+class Percentile(BaseModel):
+    percentile: float
+
+
+class GPA(BaseModel):
+    gpa: float
